--- a/docs/3x5PawnsBoardBaseCompleteDeck.config
+++ b/docs/3x5PawnsBoardBaseCompleteDeck.config
@@ -4,87 +4,87 @@ XXIXX
 XICIX
 XXIXX
 XXXXX
-Shield 2 3
-XXXXX
-XIIIX
-XICIX
-XIIIX
-XXXXX
-Sword 3 5
-XXXXX
-XIXXX
-XXCXX
-XIXXX
-XXXXX
-Archer 2 4
-XXXXX
-XXXXX
-XICIX
-XXIXX
-XXXXX
 Mandragora 1 1
 XXIXX
 XXXXX
 XICIX
 XXXXX
 XXIXX
-Hound 2 2
-XXXXX
-XIXIX
-XICIX
-XIXIX
-XXXXX
-Knight 2 4
-XXXXX
-XIIIX
-XXCXX
-XXIXX
-XXXXX
-Mage 3 5
-XXXXX
-XIXXX
-XXCXX
-XIXXX
-XXXXX
 Tempest 1 2
 XIXIX
 XXXXX
 XICIX
 XXXXX
 XIXIX
-Basilisk 3 6
-XXXXX
-XXXIX
-XICXX
-XXXIX
-XXXXX
-Centaur 2 3
-XXXXX
-XXIXX
-XICIX
-XXIXX
-XXXXX
-Golem 3 5
-XXXXX
-XIIIX
-XXCXX
-XIIIX
-XXXXX
-Hydra 3 5
-XXXXX
-XIIXX
-XICXX
-XIIXX
-XXXXX
-Phoenix 2 4
-XXXXX
-XXIXX
-XICIX
-XXIXX
-XXXXX
 Valkyrie 1 3
 XXXXX
 XXXXX
 XICIX
+XXXXX
+XXXXX
+BasePawn 1 1
+XXXXX
+XXIXX
+XICXX
+XXIXX
+XXXXX
+CenterPawn 1 1
+XXXXX
+XXXXX
+XICIX
+XXXXX
+XXXXX
+CrossPawn 1 2
+XXXXX
+XXIXX
+XICIX
+XXIXX
+XXXXX
+DiagonalPawn 1 2
+XIXXX
+XXXXX
+XICXX
+XXXXX
+XXIXX
+CornerPawn 1 2
+XIXXX
+XXXXX
+XXCXX
+XXXXX
+XIXXX
+Shield 1 3
+XXXXX
+XXXXX
+XICXX
+XXXXX
+XXXXX
+Archer 1 4
+XXXXX
+XXXXX
+XICXX
+XXIXX
+XXXXX
+Hound 1 2
+XXXXX
+XIXXX
+XICXX
+XIXXX
+XXXXX
+Knight 1 4
+XXXXX
+XXXXX
+XICXX
+XXXXX
+XXXXX
+Mage 1 5
+XXXXX
+XXXXX
+XICXX
+XXXXX
+XXXXX
+Phoenix 1 4
+XXXXX
+XXXXX
+XICXX
 XXXXX
 XXXXX
